# sokoban

./: .gitignore  Brewfile  Makefile  README.md  index.html  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
game/: index.html  server.py
game/css/: game.css
game/js/: api.js  dragController.js  input.js  main.js  pathExecutor.js  pathPlanner.js  pathRenderer.js  renderer.js  ui.js
sokoban_engine/: __init__.py
sokoban_engine/board/: __init__.py  parser.py  static_map.py  tile_index.py
sokoban_engine/core/: __init__.py  direction.py  types.py
sokoban_engine/engine/: __init__.py  game.py
sokoban_engine/history/: __init__.py  move_record.py  undo_stack.py
sokoban_engine/io/: __init__.py  level_file.py  rle.py  solution.py
sokoban_engine/logic/: __init__.py  move.py  reachability.py
sokoban_engine/state/: __init__.py  bitboard.py  game_state.py  transposition.py  zobrist.py
tests/: __init__.py  conftest.py  test_bitboard.py  test_game.py  test_game_state.py  test_level_file.py  test_parser.py  test_reachability.py  test_rle.py  test_solution.py  test_static_map.py  test_zobrist.py
