[project]
name = "sokoban-engine"
version = "0.1.0"
description = "High-performance 2D Sokoban game engine"
readme = "README.md"
authors = [
    { name = "Felipe Custodio", email = "felipe.crochi@gmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
keywords = ["sokoban", "puzzle", "game-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Typing :: Typed",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sokoban_engine"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.8.0",
]

game = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=sokoban_engine",
    "--cov-report=term-missing",
]
